2010-03-05  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/42326
	* tree-chrec.c (chrec_fold_plus_1): Do not handle convert expressions
	that contain scevs.
	(chrec_fold_multiply): Same.

2010-03-04  Andrew Pinski  <andrew_pinski@caviumnetworks.com>

	PR c/43248
	* c-decl.c (build_compound_literal): Return early if init is
	an error_mark_node.

2010-03-04  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/43164
	PR tree-optimization/43191
	* tree-sra.c (type_consists_of_records_p): Reject records with
	zero-size bit-fields at the end.

2010-03-04  Mike Stump  <mikestump@comcast.net>

	* Makefile.in (TAGS): Remove *.y.

2010-03-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40761
	* tree-ssa-pre.c (compute_antic): Walk reverse postorder
	in reverse order.
	(my_rev_post_order_compute): New function.
	(init_pre): Call it.

2010-03-04  Changpeng Fang  <changpeng.fang@amd.com>

	PR middle-end/43209
	* tree-ssa-loop-ivopts.c (determine_use_iv_cost_condition): Do not
	decrease the cost of an IV candidate when the cost is infinite.

2010-03-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/extend.texi (Vector Extensions, X86 Built-in Functions):
	Use '3DNow!' for the extension of that name, ensure normal space
	after the string.
	* doc/invoke.texi (i386 and x86-64 Options): Likewise.

2010-03-03  Jeff Law  <law@redhat.com>

	* PR middle-end/32693
	* expmed.c (store_bit_field_1): Use gen_lowpart_SUBREG rather
	than gen_rtx_SUBREG.
	(extract_bit_field_1): Likewise.

2010-03-03  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Test directives): Document that arguments
	include-opts and exclude-opts are now optional for dg-skip-if,
	dg-xfail-if, dg-xfail-run-if, and dg-shouldfail.

2010-03-03  Jason Merrill  <jason@redhat.com>

	PR c++/12909
	* cgraph.h (varpool_node): Add extra_name field.
	* varpool.c (varpool_extra_name_alias): New.
	(varpool_assemble_decl): Emit extra name aliases.